tests/baselines/reference/unusedNamespaceInNamespace.errors.txt
unusedNamespaceInNamespace.ts(2,15): error TS6133: 'B' is declared but its value is never read.


==== unusedNamespaceInNamespace.ts (1 errors) ====
    namespace A {
        namespace B { }
                  ~
!!! error TS6133: 'B' is declared but its value is never read.
        export namespace C {}
    }